--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "copy-no-tab",
+  "publisher": "amitsaha",
   "displayName": "copy-no-tab",
   "description": "Copy without tabs",
   "version": "0.0.1",
